Fix planner CFG pass-through and REFED lowering